Feat(*) html page complete

--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -31,8 +31,13 @@
             <h4 class="subtitle"> Many Flavors To Choose From! <span class="green">Sold Separately.</span></h4>
             <div class="col-12">
                 <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. As simple as 1-2-3.
                 </p>
+                <ol class="description">
+                    <li><a href="#">Pre-Order The Loop</a></li>
+                    <li><a href="#">Choose and shop the Loop Pod in your favorite flavor.</a></li>
+                    <li>NJoy!</li>
+                </ol>
             </div>
             <div class="flavors">
                 <figure class="col-3">
