--- a/assets/scss/custom/custom-the-loop.scss
+++ b/assets/scss/custom/custom-the-loop.scss
@@ -261,6 +261,15 @@
     }
     .description {
       font-size: 1.32em;
+      li {
+        a {
+          text-decoration: none;
+          &:hover {
+            color: cornflowerblue;
+            font-weight: 800;
+          }
+        }
+      };
     }
     h1, h4 {
       text-align: center;
