--- a/assets/scss/custom/custom-the-loop.scss
+++ b/assets/scss/custom/custom-the-loop.scss
@@ -196,8 +196,8 @@
   }
   .loop--intro {
     position: relative;
-    max-width: 80%;
-    margin: 10px 8vw;
+    max-width: 100%;
+    margin: 10px;
     img {
       max-height: 65%;
       max-width: 65%;
