--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -22,14 +22,16 @@ product:
             </ul>
         </div>
         <div id="overview" class="row loop--intro">
-            <div class="col-5">
-                <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png" alt="the loop">
-            </div>
-            <div class="col-7">
+            <div class="col-4">
                 <h1 class="strong">{{product.title}}</h1>
                 <p class="description">
                     With 2 Sticks, 36-hour charging case and advanced nicotine delivery, you've got an endless pack of smokes in your pocket.
                 </p>
+            </div>
+            <div class="col-4">
+                <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/522/RECHARGE_copy__67404.1530153514.1280.1280.png" alt="the loop">
+            </div>
+            <div class="col-4">
                 <div class="price">
                     <div>
                         <form class="form" method="post" action="{{product.cart_url}}" enctype="multipart/form-data"
@@ -102,28 +104,48 @@ product:
                 </ol>
             </div>
             <div class="flavors">
-                <figure class="col-3">
-                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/images/stencil/400x400/products/126/509/menthol__14123.1528237325.png?c=2" alt="">
-                    <figcaption>Menthol</figcaption>
-                </figure>
-                <figure class="col-3">
-                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/images/stencil/400x400/products/125/508/tobacco__80233.1528237228.png?c=2" alt="">
-                    <figcaption>Classic Tobacco</figcaption>
-                </figure>
-                <figure class="col-3">
-                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/images/stencil/400x400/products/127/510/blueberry__79926.1528237395.png?c=2" alt="">
-                    <figcaption>Blueberry</figcaption>
-                </figure>
-                <figure class="col-3">
-                    <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/131/images/511/melon__51128.1528237499.1280.1280.png" alt="">
-                    <figcaption>Apple Melon</figcaption>
-                </figure>
+                <a href="/njoy-loop-classic-tobacco-pods/">
+                    <figure class="col-4">
+                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/192/images/531/tobacco_2__74661.1530894244.1280.1280.png" alt="">
+                        <figcaption>Classic Tobacco</figcaption>
+                    </figure>
+                </a>
+                <a href="/njoy-loop-cool-menthol-pods/">
+                    <figure class="col-4">
+                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/189/images/534/mint__84245.1530894302.1280.1280.png" alt="">
+                        <figcaption> Cool Menthol</figcaption>
+                    </figure>
+                </a>
+                <a href="/njoy-loop-blue-blackberry-pods/">
+                    <figure class="col-4">
+                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/190/images/533/blackblue__88918.1530894280.1280.1280.png" alt="">
+                        <figcaption>Blue + Blackberry</figcaption>
+                    </figure>
+                </a>
+                <a href="/njoy-loop-tropical-twist-pods/">
+                    <figure class="col-4">
+                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/191/images/532/tropcial__51105.1530894260.1280.1280.png" alt="">
+                        <figcaption>Tropical Twist</figcaption>
+                    </figure>
+                </a>
+                <a href="/njoy-loop-rich-tobacco-pods/">
+                    <figure class="col-4">
+                        <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/188/images/535/rich_1__27144.1530894325.1280.1280.png" alt="">
+                        <figcaption>Rich Tobacco</figcaption>
+                    </figure>
+                </a>
             </div>
         </div>
         <div class="row loop--video">
             <div class="col-12">
-                <object class="vid" data="https://www.youtube.com/embed/cLtRhVpwOgA"
-                        width="650" height="400"></object>
+                <video controls="false"
+                       src="https://www.dropbox.com/s/76dh5vf97gd5lla/NJOY_rough_03.mp4?dl=0"
+                       width="650"
+                       height="400">
+                    Sorry, your browser doesn't support embedded videos.
+                </video>
+                <!--<object class="vid" data="https://www.youtube.com/embed/cLtRhVpwOgA"
+                        width="650" height="400"></object>-->
             </div>
         </div>
         <div class="hide-on-mobile row loop-gallery">
