--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -212,6 +212,10 @@
 					arrows: true,
 					dots: true
                 });
+                $('.spec-slide').slick({
+                    swipe: true,
+                    dots: true
+                });
             });
 
 		</script>
